// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MeasurementInfo /> renders correctly when the lastCapturedTime is null. 1`] = `
<Styled(MuiBox)
  className="makeStyles-infoBox-1"
>
  <WithStyles(ForwardRef(Typography))>
    No Capture Yet
  </WithStyles(ForwardRef(Typography))>
</Styled(MuiBox)>
`;

exports[`<MeasurementInfo /> renders correctly when the lastCapturedTime is provided. 1`] = `
<Styled(MuiBox)
  className="makeStyles-infoBox-1"
>
  <TimeHistoryButton
    capturedAt={2021-10-10T12:30:20.000Z}
    isTrackerOpen={true}
    onClick={[Function]}
  />
</Styled(MuiBox)>
`;
